fixed overflow issue on lower resolutions

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ i{
     gap: 1rem;
     padding: 1rem;
     overflow-y: scroll;
-    height: 75vh;
+    height: 72vh;
 }.projects>h1{
     grid-column: 1/3;
     text-align: center;
@@ -118,6 +118,10 @@ i{
 }.social{
     display: grid;
     grid-template-rows: 50px 1fr 50px 1fr;
+    gap: 1rem;
+    overflow-y: scroll;
+    height: 72vh;
+    width: 110%;
 }.announcments,.trending{
     background-color: var(--side-panel-color-text);
     border-radius: 10px;
